# backend

./: .env  .env.example  .gitignore  activate_user.py  alembic.ini  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  categories.py  projects.py  shared_projects.py  templates.py  user_assets.py  users.py
app/core/: config.py  security.py
app/crud/: base.py  crud_category.py  crud_project.py  crud_shared_project.py  crud_template.py  crud_user_asset.py  crud_users.py
app/models/: models.py
app/schemas/: schemas.py
migrations/: env.py
migrations/versions/: 2025_07_08_1144-155ec45cc3ba_initial_migration.py  2025_07_17_1618-2f82e35fc74c_add_password_hash_column.py
